tests/fixtures/valid/import-global-function.php
<?php

declare(strict_types=1);

namespace Valid;

use function strlen;

$foo = strlen('bar');
