tests/fixtures/invalid/global-function-fully-qualified.php
<?php

declare(strict_types=1);

namespace Invalid;

$foo = \strlen('bar');
